Enable AsciidocletIntegrationTest.