@@ -96,9 +96,12 @@
                 <version>3.2.5</version>
                 <configuration>
                     <argLine>
+                        --add-opens jdk.compiler/com.sun.tools.javac.api=asciidoclet
+                        --add-opens jdk.compiler/com.sun.tools.javac.parser=asciidoclet
+                        --add-exports jdk.compiler/com.sun.tools.javac.model=asciidoclet
+                        --add-exports jdk.compiler/com.sun.tools.javac.tree=asciidoclet
                         --add-exports jdk.compiler/com.sun.tools.javac.parser=asciidoclet
                         --add-exports jdk.compiler/com.sun.tools.javac.util=asciidoclet
-                        --add-opens jdk.compiler/com.sun.tools.javac.parser=asciidoclet
                         --add-exports jdk.javadoc/jdk.javadoc.internal.tool=asciidoclet
                     </argLine>
                 </configuration>
